@@ -9,11 +9,20 @@ public class ServerManager {
 
     public static void startAllServers(String jarPath, int numServers) throws IOException {
         for (int i = 1; i <= numServers; i++) {
-            // Include the protobuf JVM compatibility flag and the add-opens option when launching child JVMs
+            // Include the protobuf JVM compatibility flag and the add-opens options when launching child JVMs
             ProcessBuilder pb = new ProcessBuilder(
                     "java",
-                    "--add-opens=java.base/sun.misc=ALL-UNNAMED",
                     "-Dcom.google.protobuf.use_unsafe_pre22_gencode=true",
+                    "--enable-native-access=ALL-UNNAMED",
+                    "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                    "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                    "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                    "--add-opens=java.base/java.io=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util=ALL-UNNAMED",
                     "-jar",
                     jarPath,
                     String.valueOf(i)
